home: fix day overflow-x 2

--- a/day.css
+++ b/day.css
@@ -75,5 +75,7 @@
 }
 main {
     color: #000;
+}
+html {
     overflow-x: hidden;
 }
